--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,27 +7,26 @@
 # NOTE that only one of the CV options should be selected, the first is for the
 #      Markdown formatted page while the second is generated using JSON.
 
-main:
-  - title: "Publications"
-    url: /publications/
+# main:
+#   - title: "Publications"
+#     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+#     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+#   - title: "Teaching"
+#     url: /teaching/    
+#    
+#   - title: "Portfolio"
+#     url: /portfolio/
+#        
+#   - title: "Blog Posts"
+#     url: /year-archive/
     
   - title: "CV"
     url: /cv/
     
-  # - title: "CV"
-  #   url: /cv-json/
-    
-  - title: "Guide"
-    url: /markdown/
+#   # - title: "CV"
+#   #   url: /cv-json/
+#    
+#   - title: "Guide"
+#     url: /markdown/
