--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,7 +23,7 @@
 #     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: files/Holtzman_CV_public.pdf
     
 #   # - title: "CV"
 #   #   url: /cv-json/
