--- a/_config.yml
+++ b/_config.yml
@@ -15,21 +15,21 @@ name                     : &name "Tessa Holtzman"
 description              : &description "personal description"
 url                      : https://tessaholtzman.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "tessaholtzman.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  # avatar           : "TessaHoltzman.jpg"
-  # name             : "Tessa Holtzman"
-  # pronouns         : "she/her"  
-  # bio              : "PhD Candidate, Stanford University Department of Sociology"
-  # location         : "Stanford, CA"
+  avatar           : "TessaHoltzman.jpg"
+  name             : "Tessa Holtzman"
+  pronouns         : "she/her"  
+  bio              : "PhD Candidate, Stanford University Department of Sociology"
+  location         : "Stanford, CA"
   # employer         : "Red Brick University"
-  # uri              : # URL
-  # email            : "tessamh@stanford.edu" 
+  uri              : # URL
+  email            : "tessamh@stanford.edu" 
   # academia         : # URL
   # arxiv            : # URL - Update with the correct link to your profile
   # googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
@@ -40,10 +40,10 @@ author:
   # researchgate     : # URL
   # scopus           : # URL
   # bitbucket        : # Username - Update with your username on the site
-  # codepen          : # Username
+  # codepen  GitHub Pages template for academic personal websites         : # Username
   # dribbble         : # Username
-  # github           : "tessaholtzman"
-  # kaggle           : # Username  
+  github           : "tessaholtzman"
+  #kaggle           : # Username  
   # stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
   # artstation       : # Username
   # bluesky          : "bsky.app" # Replace this with you Bluesky username
@@ -55,7 +55,7 @@ author:
   # keybase          : # Username
   # instagram        : # Username
   # lastfm           : # Username
-  # linkedin         : tessa-holtzman
+  linkedin         : tessa-holtzman
   # mastodon         : # URL
   # medium           : # URL
   # pinterest        : # Username
@@ -63,7 +63,7 @@ author:
   # steam            : # Username
   # telegram         : # URL
   # tumblr           : # Username
-  # twitter          : # Username for X / Twitter
+  # twitter          : tessa_holtzman
   # vine             : # Username
   # weibo            : # Username
   # wikipedia        : # Username
