--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,7 +23,7 @@ main:
 #     url: /year-archive/
     
   - title: "CV"
-    url: https://tessaholtzman.github.io/files/Holtzman_CV_public.pdf
+    url: /files/Holtzman_CV_public.pdf
     
 #   # - title: "CV"
 #   #   url: /cv-json/
